--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -159,7 +159,9 @@
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\TranslatorService\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
