--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -72,7 +72,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Model\ChoiceCorrectTrainingModel.cs" />
+    <Compile Include="Model\MultichoiceTrainingModel.cs" />
     <Compile Include="Model\TrainingsListItemModel.cs" />
     <Compile Include="Model\WordsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,8 +91,8 @@
     <Compile Include="Translator\ITranslator.cs" />
     <Compile Include="Model\TextToSpeech.cs" />
     <Compile Include="Translator\TranslatorFactory.cs" />
-    <Compile Include="Views\ChoiceCorrectTrainingView.xaml.cs">
-      <DependentUpon>ChoiceCorrectTrainingView.xaml</DependentUpon>
+    <Compile Include="Views\MultichoiceTraining.xaml.cs">
+      <DependentUpon>MultichoiceTraining.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TiltEffect.cs" />
     <Compile Include="Views\WordEditor.xaml.cs">
@@ -113,7 +113,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ChoiceCorrectTrainingView.xaml">
+    <Page Include="Views\MultichoiceTraining.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -131,6 +131,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="appbar_wordslist.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <DesignData Include="Model\MultichoiceTrainingViewTestData.xml">
+      <Generator>MSBuild:Compile</Generator>
+    </DesignData>
+    <Content Include="question.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Translate.png">
