--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -52,7 +52,7 @@
     <Reference Include="Microsoft.Advertising.Mobile.UI, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Controls" />
-    <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone.Interop" />
     <Reference Include="Microsoft.Xna.Framework" />
     <Reference Include="system.data.linq" />
@@ -91,6 +91,9 @@
     <Compile Include="Translator\ITranslator.cs" />
     <Compile Include="Model\TextToSpeech.cs" />
     <Compile Include="Translator\TranslatorFactory.cs" />
+    <Compile Include="Views\AnswerChoiceControl.xaml.cs">
+      <DependentUpon>AnswerChoiceControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MultichoiceTraining.xaml.cs">
       <DependentUpon>MultichoiceTraining.xaml</DependentUpon>
     </Compile>
@@ -111,6 +114,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AnswerChoiceControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -136,6 +143,7 @@
     <Content Include="Images\ApplicationIcon.png" />
     <Content Include="Images\Background.png" />
     <EmbeddedResource Include="Images\PanoramaBackground.png" />
+    <Content Include="Images\right.png" />
     <Content Include="Images\Sound_dark_small.png" />
     <Content Include="Images\Sound_light_small.png" />
     <SplashScreen Include="Images\SplashScreenImage.jpg">
@@ -162,6 +170,7 @@
     <DesignData Include="Model\TestData1.xml">
       <Generator>MSBuild:Compile</Generator>
     </DesignData>
+    <Content Include="Images\wrong.png" />
     <Content Include="ServiceReferences.ClientConfig" />
   </ItemGroup>
   <ItemGroup>
