--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -73,7 +73,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\MultichoiceTrainingModel.cs" />
-    <Compile Include="Model\TrainingsListItemModel.cs" />
+    <Compile Include="Model\VocabularyViewModel.cs" />
     <Compile Include="Model\WordsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
