--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -108,10 +108,10 @@
     <Compile Include="Views\ExtendedLanguageSelect.xaml.cs">
       <DependentUpon>ExtendedLanguageSelect.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\MultichoiceTraining.xaml.cs">
-      <DependentUpon>MultichoiceTraining.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\TiltEffect.cs" />
+    <Compile Include="Views\TrainingView.xaml.cs">
+      <DependentUpon>TrainingView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\WordEditor.xaml.cs">
       <DependentUpon>WordEditor.xaml</DependentUpon>
     </Compile>
@@ -154,9 +154,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\MultichoiceTraining.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Views\TrainingView.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\WordEditor.xaml">
       <SubType>Designer</SubType>
