--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Model\DirectChoiceExercise.cs" />
     <Compile Include="Model\Exercise.cs" />
     <Compile Include="Model\LanguageListModel.cs" />
+    <Compile Include="Model\NewWordExercise.cs" />
     <Compile Include="Model\VocabularyViewModel.cs" />
     <Compile Include="Model\WordsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -107,6 +108,9 @@
     </Compile>
     <Compile Include="Views\ExtendedLanguageSelect.xaml.cs">
       <DependentUpon>ExtendedLanguageSelect.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PresentWordControl.xaml.cs">
+      <DependentUpon>PresentWordControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TiltEffect.cs" />
     <Compile Include="Views\TrainingView.xaml.cs">
@@ -151,6 +155,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ExtendedLanguageSelect.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\PresentWordControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
