show tips in exercises, create base class for all exercise controls

--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Views\AnswerChoiceControl.xaml.cs">
       <DependentUpon>AnswerChoiceControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ExerciseControl.cs" />
     <Compile Include="Views\ExtendedLanguageSelect.xaml.cs">
       <DependentUpon>ExtendedLanguageSelect.xaml</DependentUpon>
     </Compile>
