--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -74,6 +74,7 @@
     </Compile>
     <Compile Include="Model\BackwardChoiceExercise.cs" />
     <Compile Include="Model\ChoiceExercise.cs" />
+    <Compile Include="Model\SpellingExercise.cs" />
     <Compile Include="Model\DirectChoiceExercise.cs" />
     <Compile Include="Model\Exercise.cs" />
     <Compile Include="Model\LanguageListModel.cs" />
@@ -105,6 +106,9 @@
     </Compile>
     <Compile Include="Views\AnswerChoiceControl.xaml.cs">
       <DependentUpon>AnswerChoiceControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SpellingTrainingControl.xaml.cs">
+      <DependentUpon>SpellingTrainingControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ExerciseControl.cs" />
     <Compile Include="Views\ExtendedLanguageSelect.xaml.cs">
@@ -154,6 +158,10 @@
     <Page Include="Views\AnswerChoiceControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SpellingTrainingControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\ExtendedLanguageSelect.xaml">
       <SubType>Designer</SubType>
