--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -201,6 +201,9 @@
     <Content Include="Images\add.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\PanoramaBackground.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\vocabulary.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -217,7 +220,6 @@
     <Content Include="Images\appbar_wordslist.png" />
     <Content Include="Images\ApplicationIcon.png" />
     <Content Include="Images\Background.png" />
-    <EmbeddedResource Include="Images\PanoramaBackground.png" />
     <Content Include="Images\right.png" />
     <Content Include="Images\Sound_dark_small.png" />
     <Content Include="Images\Sound_light_small.png" />
