--- a/ManyWords/ManyWords.csproj
+++ b/ManyWords/ManyWords.csproj
@@ -219,6 +219,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\appbar_settings.png" />
+    <Resource Include="Images\Tile.png" />
     <Content Include="Images\vocabulary.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -234,7 +235,6 @@
     </Content>
     <Content Include="Images\appbar_wordslist.png" />
     <Content Include="Images\ApplicationIcon.png" />
-    <Content Include="Images\Background.png" />
     <Content Include="Images\right.png" />
     <Content Include="Images\Sound_dark_small.png" />
     <None Include="Service References\TranslatorService\soap.wsdl" />
